//Revision 3
Corrigido bug nas cartas (Pife nao possui valete). Construtor corrigido.
Criada nova classe: Interface. Implementa os metodos para imprimir a interface.
//Revision 4
Corrigido bug na inicializacao das cartas (faltava inicializar o ArrayList da mao de cartas) do jogador
//Revision 5
Jogador:
String nome alterada para final
Mao de cartas do jogador alterado para private
Implementados metodos para acesso a mao de cartas do jogador
Interface:
Implementados metodos de impressao da Interface
Carta:
Adidionado integer para identificar o naipe da carta
Main:
Programa principal implementado
TO-DO:
Verificar as entradas do usuario para evitar conflitos
Implementar as condicoes de vitoria
Implementar interface de vitoria
Implementar verificacao de turno (cada jogador so pode descartar/comprar uma vez por turno)
//Revision 6
Interface:
Implementado metodo para limpar o console
Aprimoramentos na interface
Programa principal:
Implementado a verificacao de turno
Implementada a verificacao de entrada
//Revision 7
Interface:
Novos metodos implementados
Comandos de impressao da interface agora sao responsabilidade da classe interface (exceto em mensagens de erro)
Mensagens de erro padronizadas
Interface padronizada (consistente)
TODO: Terminar condicoes de vitoria
Primeira carta do lixo visivel
Quando monte acabar, reembaralhar lixo
Modularizacao
//Revision 8
Programa principal:
Verificacao de vitoria implementada
Distribuicao de cartas movida para a classe Procedimentos
Interface:
Mensagens de erros movidas para a classe interface
Mensagens de boas vindas movidas para a classe interface
A interface agora mostra a primeira carta do lixo quando o usuario for comprar uma carta
Procedimentos:
Implementado procedimento para distribuir cartas
Implementado procedimento para verificar as condicoes do turno (Quando monte acabar, reembaralhar lixo)
TO-DO:
Implementar tela de vitoria
Separar o codigo em pacotes (modularizar)