@@ -3,7 +3,7 @@
  * To change this template file, choose Tools | Templates
  * and open the template in the editor.
  */
-package trabalho.pratico.pkg2;
+package trabalho.pratico.pkg2.modelagem;
 
 /**
  *
@@ -36,3 +36,4 @@ public abstract class Carta
     }
     
 }
+
