@@ -3,7 +3,7 @@
  * To change this template file, choose Tools | Templates
  * and open the template in the editor.
  */
-package trabalho.pratico.pkg2;
+package trabalho.pratico.pkg2.modelagem;
 
 import java.util.ArrayList;
 import java.util.List;
